--- a/style.css
+++ b/style.css
@@ -51,7 +51,7 @@ nav{
 
 @media screen and (max-width:1024px){
     body{
-        overflow-x: hidden!important;
+        overflow: hidden!important;
     }
     .logo{
         font-size: 60px;
