--- a/style.css
+++ b/style.css
@@ -52,6 +52,7 @@ nav{
 @media screen and (max-width:1024px){
     .bodydiv{
         overflow-x: hidden;
+        width: 100%;
     }
     .logo{
         font-size: 60px;
