--- a/style.css
+++ b/style.css
@@ -53,6 +53,8 @@ nav{
     body {
         /*position:relative;*/
         overflow-x:hidden;
+        min-width: 0%;
+        min-height: 0%;
     }
     .logo{
         font-size: 60px;
@@ -63,7 +65,7 @@ nav{
         height: 92vh;
         top: 8vh;
         background-color: darkcyan;
-        /*display: flex;*/
+        display: flex;
         flex-direction: column;
         align-items: center;
         width: 50%;
