--- a/style.css
+++ b/style.css
@@ -50,7 +50,7 @@ nav{
 }
 
 @media screen and (max-width:1024px){
-    body {
+    .bodydiv{
         /*position:relative;*/
         overflow-x:hidden;
         min-width: 0%;
