--- a/style.css
+++ b/style.css
@@ -67,8 +67,9 @@ nav{
         flex-direction: column;
         align-items: center;
         width: 50%;
-        transform: translateX(100%);
-        transition: transform 0.5s ease-in;
+        /*transform: translateX(100%);*/
+        /*transition: transform 0.5s ease-in;*/
+        opacity: 0;
     }
     .nav-links li{
         opacity: 0;
@@ -82,10 +83,22 @@ nav{
 }
 
 .nav-active{
-    transform: translateX(0%);
+    /*transform: translateX(0%);*/
+    opacity: 1;
 }
 
 @keyframes navLinkFade{
+    from{
+        opacity: 0;
+        transform: translateX(50px);
+    }
+    to{
+        opacity: 1;
+        transform: translateX(0px);
+    }
+}
+
+@keyframes navPanelFade{
     from{
         opacity: 0;
         transform: translateX(50px);
