--- a/style.css
+++ b/style.css
@@ -108,3 +108,39 @@ nav{
         transform: translateX(0px);
     }
 }
+
+.start-page{
+    padding: 2%;
+    display:flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.main-headline{
+    padding: 2%;
+    font-size: 35px;
+}
+
+.main-article{
+    padding: 2%;
+    font-size: 28px;
+}
+
+.home-image{
+    padding: 0%;
+    display: flex;
+    max-width: 100%;
+}
+
+footer{
+    background-color: darkcyan;
+    padding: 5%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    bottom: 0;
+}
+
+.seperator{
+    padding: 15%;
+}
