--- a/style.css
+++ b/style.css
@@ -139,8 +139,10 @@ footer{
     flex-direction: column;
     align-items: center;
     bottom: 0;
+    min-height:620px;
+    height:auto;
 }
 
 .seperator{
-    padding: 15%;
+    padding: 5%;
 }
