--- a/style.css
+++ b/style.css
@@ -49,73 +49,6 @@ nav{
     font-size: 24px;
 }
 
-@media screen and (max-width:1024px){
-    body{
-        position:relative;
-        overflow-x:hidden;
-    }
-    .logo{
-        font-size: 60px;
-    }
-    .nav-links{
-        position: absolute;
-        right: 0px;
-        height: 92vh;
-        top: 8vh;
-        background-color: darkcyan;
-        display: flex;
-        flex-direction: column;
-        align-items: center;
-        width: 50%;
-        /*transform: translateX(100%);*/
-        /*transition: transform 0.5s ease-in;*/
-        opacity: 0;
-    }
-    .nav-links li{
-        opacity: 0;
-    }
-    .nav-links a{
-        font-size: 38px;
-    }
-    .burger{
-        display: block;
-    }
-    .main-headline{
-        font-size: 38px;
-    }
-    
-    .main-article{
-        font-size: 32px;
-    }
-}
-
-.nav-active{
-    /*transform: translateX(0%);*/
-    opacity: 1;
-}
-
-@keyframes navLinkFade{
-    from{
-        opacity: 0;
-        transform: translateX(50px);
-    }
-    to{
-        opacity: 1;
-        transform: translateX(0px);
-    }
-}
-
-/*@keyframes navPanelFade{
-    from{
-        opacity: 0;
-        transform: translateX(50px);
-    }
-    to{
-        opacity: 1;
-        transform: translateX(0px);
-    }
-}*/
-
 .start-page{
     padding: 2%;
     display:flex;
@@ -175,8 +108,79 @@ footer{
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
-    font-size: 1600%;
+    font-size: 1400%;
     background-color: rgba(71, 71, 71, 0.7);
-    border-radius: 0.2em;
-    padding: 0.2em;
+    border-radius: 40px;
+    padding: 40px;
 }
+
+@media screen and (max-width:1024px){
+    body{
+        position:relative;
+        overflow-x:hidden;
+    }
+    .logo{
+        font-size: 60px;
+    }
+    .nav-links{
+        position: absolute;
+        right: 0px;
+        height: 92vh;
+        top: 8vh;
+        background-color: darkcyan;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        width: 50%;
+        opacity: 0;
+    }
+    .nav-links li{
+        opacity: 0;
+    }
+    .nav-links a{
+        font-size: 38px;
+    }
+    .burger{
+        display: block;
+    }
+    .main-headline{
+        font-size: 38px;
+    }
+    
+    .main-article{
+        font-size: 32px;
+    }
+
+    .image-text{
+        font-size: 800%;
+    }
+}
+
+.nav-active{
+    /*transform: translateX(0%);*/
+    opacity: 1;
+}
+
+@keyframes navLinkFade{
+    from{
+        opacity: 0;
+        transform: translateX(50px);
+    }
+    to{
+        opacity: 1;
+        transform: translateX(0px);
+    }
+}
+
+/*@keyframes navPanelFade{
+    from{
+        opacity: 0;
+        transform: translateX(50px);
+    }
+    to{
+        opacity: 1;
+        transform: translateX(0px);
+    }
+}*/
+
+
